@@ -2,6 +2,7 @@ TAG: qcreports_db-6-0-10-?
 DATE: 03/07/2017
 STAFF: lec 
 TR12540/DO (Disease Ontology)
+ALL_OMIMNoMP.py renamed ALL_DONoMP.py
 
 TAG: qcreports_db-6-0-8-11
 DATE: 03/14/2017
